              nothing to do with initialised vs uninitialised matrices.
              The old name is kept but deprecated.
            - The ring template argument now defaults to true for matrices over
              native C++ floating-point types, and Python now has a new binding
              MatrixReal to represent the C++ type Matrix<double>.
        Enum NamedPermGroup:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., PERM_GROUP_TRIVIAL) have been
              renamed as scoped enum values (e.g., NamedPermGroup::Trivial).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class NativeInteger<bytes>:
            - New routine str().
        Enum NiceType:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., NICE_INTRODUCE) have been
              renamed as scoped enum values (e.g., NiceType::INTRODUCE).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class NormalSurface, NormalHypersurface:
            - Fixed a bug where, if a surface was a normalised triangle link
              but not a thin triangle link, then calling isThinTriangleLink()
              _before_ isNormalTriangleLink() would make the latter return
              an empty list of results.  Likewise with tetrahedron links in
              4-dimensional triangulations.
            - Fix a bug in components() when used on disconnected surfaces,
              where if it were called _after_ connectedness has already been
              established (i.e., after isOrientable(), isTwoSided(),
              isConnected(), or an earlier call to components()), then it would
              return the entire surface as a single component.
            - The vector constructors are now templated, so that you can pass a